--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This file was created using [Jupyter Notebook](http://jupyter.org/).\n",
+    "\n",
+    "First, we need to import numpy, matplotlib, timeit and the collector."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -12,6 +21,13 @@
     "import matplotlib.pyplot as plt\n",
     "import treadmill\n",
     "import timeit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we define a function for rendering a plot showing the size of the input and the time it took to process it."
    ]
   },
   {
@@ -30,9 +46,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first analysis simply constructs an empty heap with a number of initial cells. It allocates cells repeatedly, not storing them as roots. We can see that with increasing heap size the time stays constant, therefore allocating new cells is `O(1)`.\n",
+    "\n",
+    "This code creates heaps of size 100, 200, 300, ..., 20000 cells and then calls `allocate` 50 times. Scanning will never start, since `scan_threshold` is set to 0."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -57,6 +84,18 @@
     "    times.append(time)\n",
     "\n",
     "draw_plot(sizes, times)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we do the same as before, but with two differences:\n",
+    "\n",
+    "1. `scan_threshold` is set to 1, meaning scanning will start every time.\n",
+    "2. We allocate 30 cells that are declared as roots before timing allocation.\n",
+    "\n",
+    "We can see that the time is still constant with increasing heap size. This shows that scanning the heap while allocating is `O(1)` even when the heap size is increasing."
    ]
   },
   {
@@ -103,6 +142,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To check that the size of the objects that are garbage collected does not affect the performance, we can construct linked lists with increasing sizes.\n",
+    "\n",
+    "For each list size, we first create a heap with the initial size twice the size of the list, and `scan_threshold` 0.5. This is so that scanning does not begin until we create the list (i.e. until half the size of the heap is allocated).\n",
+    "\n",
+    "Then we create a list and make sure it is marked as a root, so that it is not collected. When the list is created, we unmark it as a root, making it available to be collected.\n",
+    "\n",
+    "Once we have the garbage list on the heap, we begin timing the calls to `allocate`. These will remain `O(1)` even while scanning the object, as only a fixed number of cells are scanned per one call."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAZAAAAD8CAYAAABZ/vJZAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAIABJREFUeJzt3XuUXXV99/H3d2aSQCRMhiTcEkiC\ngUjCxZJpDLVaBIVAwZSLJYgKSqT1gUWF2gr1ETFdXauU8kirUJ4YQKTRgIgYKZRLQeGxTGAGuSRA\ncAyEJNxCbmiFzO37/PHbe2afM+e658w5Zyaf11qz5px9/e3f2Xt/9++y9zZ3R0REpFwNtU6AiIiM\nTAogIiKSigKIiIikogAiIiKpKICIiEgqCiAiIpKKAoiIiKSiACIiIqkogIiISCpNtU7AcJo8ebLP\nmDGj1skQERlROjo63nb3KcWmG9UBZMaMGbS3t9c6GSIiI4qZbShlOlVhiYhIKgogIiKSigKIiIik\nogAiIiKpKICIiEgqCiAiIpKKAojk1LFhO9c/0knHhu21ToqI1KlRfR+IpNOxYTvnLm+jq6ePsU0N\nrFiygHnTW2qdLBGpMyqByCBt67fS1dNHn0N3Tx9t67fWOkkiUocUQGSQBYdMYmxTA40GY5oaWHDI\npFonSUTqkKqwZJB501tYsWQBbeu3suCQSaq+EpGcFEAkp3nTWxQ4RKQgVWGJiEgqCiAiIpKKAoiI\niKSiACIiIqkogIiISCoKICIikooCiIiIpFJSADGzhWa2zsw6zezyHOPHmdnt0fjVZjYjMe6KaPg6\nMzup2DLN7CYze8bMnjWzO81sr2j4+Wa2xcyejv6WDGXDRURkaIoGEDNrBK4HTgbmAOeY2ZysyS4A\ntrv7LOBbwNXRvHOAxcBcYCFwg5k1Flnmpe5+tLsfBbwKXJxYz+3u/sHob3m6TRYRkUoopQQyH+h0\n9/Xu3gWsBBZlTbMIuDX6fCdwgplZNHylu+9y95eBzmh5eZfp7u8ARPPvCfhQNlBERIZHKQFkKrAx\n8X1TNCznNO7eA+wEJhWYt+AyzewW4A3gA8C3E9OdmajaOqiEtEsN6Z0iIqNbXTaiu/vngQOBF4Cz\no8E/A2ZEVVsPMlDiyWBmF5pZu5m1b9mypSrplcHid4pc+8A6zl3epiAiMgqVEkA2A8mr/WnRsJzT\nmFkT0AxsLTBv0WW6ey+hauvM6PtWd98VjV4OzMuVWHdf5u6t7t46ZcqUEjavNLqaLo/eKSIy+pUS\nQJ4EDjWzmWY2ltAoviprmlXAedHns4CH3d2j4YujXlozgUOBJ/It04JZ0N8G8kngxej7AYn1fZJQ\nOqkKXU2XT+8UERn9ij7O3d17zOxi4H6gEbjZ3dea2VKg3d1XATcBt5lZJ7CNEBCIprsDeB7oAS6K\nShbkWWYDcKuZ7Q0Y8AzwpSgpl5jZJ6PlbAPOr0gOlCDX1bQedV6Y3ikiMvpZKCiMTq2trd7e3j7k\n5cQlkO6ePsboHeEiMsqZWYe7txabTi+UKoGupkVEBlMAKZHe0Ccikqkuu/GKiEj9UwAREZFUFEBE\nRCQVBRAREUlFAURERFJRABERkVQUQEREJBUFEBERSUUBREREUlEAERGRVBRAREQkFQUQERFJRQFE\nRERSUQAREZFUFEBERCQVBRAREUlFAURERFJRABERkVQUQEREJBUFEBERSUUBREREUlEAERGRVBRA\nREQkFQUQERFJRQFERERSUQAREZFUFEBERCQVBRAREUlFAURERFJRABERkVRKCiBmttDM1plZp5ld\nnmP8ODO7PRq/2sxmJMZdEQ1fZ2YnFVummd1kZs+Y2bNmdqeZ7VVsHSIiUn1FA4iZNQLXAycDc4Bz\nzGxO1mQXANvdfRbwLeDqaN45wGJgLrAQuMHMGoss81J3P9rdjwJeBS4utA4REamNUkog84FOd1/v\n7l3ASmBR1jSLgFujz3cCJ5iZRcNXuvsud38Z6IyWl3eZ7v4OQDT/noAXWYeMIB0btnP9I510bNhe\n66SIyBA1lTDNVGBj4vsm4EP5pnH3HjPbCUyKhrdlzTs1+px3mWZ2C3AK8Dzw10XW8XYJ2yB1oGPD\nds5d3kZXTx9jmxpYsWQB86a31DpZIpJSXTaiu/vngQOBF4Czy5nXzC40s3Yza9+yZcuwpE/SaVu/\nla6ePvocunv6aFu/tdZJEpEhKCWAbAYOSnyfFg3LOY2ZNQHNwNYC8xZdprv3Eqq2ziyyDrLmW+bu\nre7eOmXKlBI2T6plwSGTGNvUQKPBmKYGFhwyqdZJEpEhKCWAPAkcamYzzWwsoVF8VdY0q4Dzos9n\nAQ+7u0fDF0c9qGYChwJP5FumBbOgvw3kk8CLRdYhI8S86S2sWLKAy06creorkVGgaBtI1N5wMXA/\n0Ajc7O5rzWwp0O7uq4CbgNvMrBPYRggIRNPdQWjL6AEuikoW5FlmA3Crme0NGPAM8KUoKTnXISPL\nvOktChwio4SN5ov41tZWb29vr3UyRERGFDPrcPfWYtPVZSO6iIjUPwUQERFJRQFERERSUQAREZFU\nFEAkgx41IiKlKuVRJrKb0KNGRKQcKoFIPz1qRETKoQAi/fSoEREph6qwpF/8qJG29VtZcMgkVV+J\nSEEKIJJBjxoRkVKpCktERFJRABERkVQUQEREJBUFEBERSUUBREREUlEAERGRVBRAREQkFQUQERFJ\nRQFERERSUQDJQY80FxEpTo8yyaJHmouIlEYlkCx6pLmISGkUQLLokeYiIqVRFVYWPdJcKq1jw3bt\nTzIqKYDkoEeaS6WoTU1GM1VhiQwjtanJaKYAIjKM1KYmo5mqsESGkdrUZDRTABEZZmpTk9FKVVgi\nIpKKAoiIiKSiACIiIqkogIiISColBRAzW2hm68ys08wuzzF+nJndHo1fbWYzEuOuiIavM7OTii3T\nzFZEw9eY2c1mNiYafpyZ7TSzp6O/K4ey4SIiMjRFA4iZNQLXAycDc4BzzGxO1mQXANvdfRbwLeDq\naN45wGJgLrAQuMHMGosscwXwAeBIYE9gSWI9j7n7B6O/pWk2WEREKqOUEsh8oNPd17t7F7ASWJQ1\nzSLg1ujzncAJZmbR8JXuvsvdXwY6o+XlXaa73+sR4Alg2tA2UUREhkMpAWQqsDHxfVM0LOc07t4D\n7AQmFZi36DKjqqvPAv+ZGHysmT1jZveZ2dxciTWzC82s3czat2zZUsLmiYhIGvXciH4D8Ki7PxZ9\nfwqY7u5HA98G7s41k7svc/dWd2+dMmVKlZIqIrL7KSWAbAYOSnyfFg3LOY2ZNQHNwNYC8xZcppl9\nA5gCXBYPc/d33P130ed7gTFmNrmE9IuIyDAoJYA8CRxqZjPNbCyhUXxV1jSrgPOiz2cBD0dtGKuA\nxVEvrZnAoYR2jbzLNLMlwEnAOe7eF6/AzPaP2lUws/lR2vVoUxGRGin6LCx37zGzi4H7gUbgZndf\na2ZLgXZ3XwXcBNxmZp3ANkJAIJruDuB5oAe4yN17AXItM1rljcAG4PEoXtwV9bg6C/iSmfUA7wKL\noyAlIiI1YKP5HNza2urt7e21ToYUoLf1idQfM+tw99Zi0+lpvKNYvZ+c07ytr963SWR3ogAySo2E\nV6nmeltfoTSOhG0qRMFPRpt67sYrQzASXqVa7tv6KrVNHRu2c/0jnXRs2J5q/rTrPHd5G9c+sI5z\nl7dVdd0iw0UlkFEqPjl39/TV7atUy31bXyW2qValmHJLWyIjgQLIKDVSXqVaztv6KrFNtTqRj4SA\nLlIuBZBRbDS+SnWo21SrE/lICegi5VA3XtntqDFbpDB14xXJYzSWzKT6dCGiACIiUraR3qW8UtSN\nV6quFt1oRSppJHSTrwaVQKSqdOUmo4F61QUKIFJVuh9CRgP1qgsUQKSqdOUmo4U6YyiASJXpyk1k\n9FAAkarTlZvI6KBeWCIikooCiIiIpKIAIiIiqSiAiIhIKgogIiKSigKIiIikogAiIiKpKICIiEgq\nCiAiIjU2Up9QrTvRRURqaCQ/oVolEBGRGhrJ7xZRABERqaH4CdWNxoh7QrWqsEREamgkP6FaAURE\npMZG6hOqVYUlIiKpKICIiEgqCiAiUlUj9Z4HGaykAGJmC81snZl1mtnlOcaPM7Pbo/GrzWxGYtwV\n0fB1ZnZSsWWa2Ypo+Bozu9nMxkTDzcz+NZr+WTM7ZigbLiLVF9/zcO0D6zh3eZuCyAhXNICYWSNw\nPXAyMAc4x8zmZE12AbDd3WcB3wKujuadAywG5gILgRvMrLHIMlcAHwCOBPYElkTDTwYOjf4uBP4t\nzQaLSO2M5HseZLBSSiDzgU53X+/uXcBKYFHWNIuAW6PPdwInmJlFw1e6+y53fxnojJaXd5nufq9H\ngCeAaYl1fD8a1QZMNLMDUm63iNTASL7nQQYrpRvvVGBj4vsm4EP5pnH3HjPbCUyKhrdlzTs1+lxw\nmVHV1WeBvyqQjqnA61nzXUgooXDwwQcX3TgRqZ6RfM+DDFbP94HcADzq7o+VM5O7LwOWAbS2tvpw\nJExE0hup9zzIYKUEkM3AQYnv06JhuabZZGZNQDOwtci8eZdpZt8ApgB/UWY6RESkSkppA3kSONTM\nZprZWEKj+KqsaVYB50WfzwIejtowVgGLo15aMwkN4E8UWqaZLQFOAs5x976sdXwu6o21ANjp7hnV\nVyIiUj1FSyBRm8bFwP1AI3Czu681s6VAu7uvAm4CbjOzTmAbISAQTXcH8DzQA1zk7r0AuZYZrfJG\nYAPweGiH5y53XwrcC5xCaIj/PfD5SmSAiIikY6GgMDq1trZ6e3t7rZMhIjKimFmHu7cWm053oouI\nSCoKICIikooCiIiIpKIAUiY9CE5EJKjnGwnrTvwguK6ePsY2NbBiyQLdECUiuy2VQMqgB8GJiAxQ\nACmDHgQnIjJAVVhl0IPgREQGKICUSQ+CExEJVIW1m1DvMRGpNJVAdgPqPSYiw0ElkN2Aeo+JyHBQ\nANkNqPeYiAwHVWHtBtR7TESGgwLIbkK9x6qrY8N2BWwZ9RRARCpMnRZkd6E2EJEKU6cF2V0ogIhU\nWL11WtA9QDJcVIUlUmH11GlB1WkynBRARIZBvXRayFWdVg/pktFBVVgio1i9VafJ6KISiMgoVk/V\naTL6KICIjHL1Up0mo4+qsKQg9eARkXxUApG81INH6pXu9K8PCiCSVzk9eCp9QOsEIfnowqZ+KIDk\n87WvwQ9+AM3NMHFi+N/SArfcAmbw4IOwYcPAuIkTw/hZs2qd8oqJe/B09/QV7MFT6QN6KMuLA0/L\n+LFs/32XAlBKpQbwcvK7UhcF1eyarAuZwhRA8jn8cPjIR2DHDti5E155BdavD8EDYPlyuOOOzHkO\nOABeey18/vM/h0cfzQxAs2fDt78dxq9YAdu2ZY7ff/8wDYD7wLoqpNyDodQePJU+oNMuLw48u7r7\ncKDBKCsAZedPmpPHaDjhlBrAy8nvfMvMl1+F8rHUC5vs9af5LWtd0km7P1VrP1QAyecznwl/+dx0\nE1xzTQgucZDp6xsYf/zxoUSSHB8HF4DrroP29sxl/tEfwS9/GT4ffXQIWskA8yd/Av/wD2H8NdeE\n9SVLQDNmwAc+EMa/+y7ssUd/EEp7MJTSgyfNAT0cy4sDj0ffywlA2flz5alzWXrP2rLyq9w8Lvcg\nr9ZJodQAXk5+53s+WL6gUigfy+2anHbfr/VNmGnTXc3ApwCS1l57hb98/vIvgQIH/X//d2Zw2bEj\nnPBjX/hCqCJLju/uHhj/z/8Mb72Vuc7PfAZuuy18njwZurr6g8tBDXvw2Wkf4rvzz6Cnu4fGv74M\njpieGaCOOAIOOywEprh0NGZM0ayo9L0GaZcXB56u7j76CFfEpQag7JPFfWtez3nCK5SmctuMyg02\n1ToplBrAy8nvXMvMzq8fP7WJtvVbeW3Hu0XzsZyuyWkDQaUvjMqVNt3VDHwKIMOo4EE/Zkw4yU+e\nPGietvVbWXD6eYV/9DfegN//PjMINTeHce5w5ZVhWDR+7Btv0zN2DxoNmnu7OPL+O+HHv8tc5pVX\nwje/CVu2hOo0gPHjB4LM5ZfD5z4Hb74Zpk0En3kTJzLv2GNhegu8915YRnNzCLIN5fcWT3PvQjLw\nlNsGkn2yOPmIA3jylW3931vGjy16Ai/nhFPuQV7Nk0KpAbyc/M63zDi/GhuMOzs20dPbR1OD0dTY\nQG9vbUu0tb4JM226qxn4zN2LTzVCtba2ent2NVGFFapWuP6RTq59YB19Do0Gl504m4s+lr+Rfbiv\nMgeltbcX3nlnIAhNngzTpoVh3/teRgBi584QPE47DV54AY47LgzbtWtgBbfcAuefD48/HqrjIFSh\nNTeHvxtvhIUL4dlnQwkqHh6XgP70T+HAA8P63nxzYFyyZDaMCrWBtK3fWtJvWU7j87nL2/oP8lJL\nIKVOP1LE+fXajnf54ROv9ufv2fMPZurEPXf7Xn21agMxsw53by02XUklEDNbCPwL0Agsd/d/zBo/\nDvg+MA/YCpzt7q9E464ALgB6gUvc/f5CyzSzi4EvA+8Hprj729Hw44CfAi9Hq73L3ZeWkv7hUuyE\nX+6VwHBfZQ66qm9sDO00LVnr2HtvuOSS/As6/PBwgodQ2ogDzZQpYdjMmfDd7w4OQPvuG8Zv2QKP\nPTYwPm47+vnPQwD5j//IbH8aOzYEkgcfhKOOgvvug5tvHhyAPve58Hnz5oESUHNz2J6m4rt6dv5k\nfy/ltyy15FTu1W2tr4aHS5xfHRu28+OnNvXn75nHTBvefX+ESJvuam1v0aPKzBqB64FPAJuAJ81s\nlbs/n5jsAmC7u88ys8XA1cDZZjYHWAzMBQ4EHjKzw6J58i3zl8A9wM9zJOcxdz81xXYOi2In/HIP\n+lrXuaayxx7hb7/9Bobtvz8sWZJ/nhNOgJej6wB3+N3vBkpAAB/+MPz7vw8OQPH47dth7dqB8f/z\nP2H46aeHAHLLLfD1r2euc6+9QpvSPvvAsmXw058ODkB/8zchqL7wQlhHsoru4IkVOYFnXxmWs5yR\nehIsxWgNkKNdKSWQ+UCnu68HMLOVwCIgGUAWAVdFn+8EvmNmFg1f6e67gJfNrDNaHvmW6e6/ioYN\nZbuqopQTfjkHfa0OopoW781gwoTwF5sxI/zl8+lPh79Yd3eodps4MXw/+2yYO3dwAIrX8d57oQT1\n0kth3I4dIZB99ath/DXXhCCU1NLCvG3bQv783d9BW1tmAJo2Db7ylTDt44+H9qmsANXx+v/UvFto\nPRvNAXK0KiWATAU2Jr5vAj6Ubxp37zGzncCkaHhb1rxTo8/FlpnLsWb2DPAa8BV3X1vCPMNmOE74\n1T6I6qGv+5CNGQOTEsH70EPDXz6XXJJZReceuj3HFy1f/Wq4jycZgJJthWPHhqD1m9+wa9t22LED\n3+8A9ogDyBVXwC9+kbnOo4+m7Vt30tXTx7/cfTUH7XyThp+0sG3G/uxz4L6hau7ii8O0P/tZ+J8s\nHe2zT2aQlYobqe0ksVqkfyT1wnoKmO7uvzOzU4C7gUFnCTO7ELgQ4OCDDx72RI30q6Za93VPq6IH\ni1nobRabPXvghs5crroKrroq40a6RoOlq1/l0x86OFSRvfFGZuln7737S6xv7bUPze/9jgnbd7Dj\njc1MaOhmzFtvDQSQiy+GV1/NXOfpp8Ndd4XP8+aFABYHl+Zm+PjHQwcGCO1D73tf5j1C++03uK2r\nCirxO1XjxDjUC6liacw1vpLbVasLwVICyGbgoMT3adGwXNNsMrMmoJnQmF5o3mLLzODu7yQ+32tm\nN5jZ5LiRPTFuGbAMQi+swpsmI7HdpV5KTW3rt/bfhd3jcOVP1zB7/wnMO+ywcD9NlnnAiiULuG7G\nPvxD59v5e3Q9/HC4DydZApo2LbGgeaGTwI4docPA2rWh8wFATw9ccMHgxF52GVx7bWgvmjEjM7g0\nN4dOC6efHtqjli8fPH7GjFAKKkMlfqdq/dZDuZAqlsZc4yH3TZSlyg4+tboQLCWAPAkcamYzCSf5\nxcCns6ZZBZwHPA6cBTzs7m5mq4AfmNn/ITSiHwo8AVgJy8xgZvsDb0bLnU94FP3W0jZT8hmJjZf1\nUmpacMgkGhuMnr5wndLnXjQt86a38OWPH5Zxj8mgoP3+94e/fJYtyz+usRE2bcq8AXXnzoEqvb4+\n+NSnMse/8cbATamvvw6XXjp4ud/5Dlx0ETz3HBx7bGZwaW6Gv/1b+NjHQslpxQpobmbra+/x4XXv\nsHPceDqnTA95c1BzKPGV2MZZrd96KBdSxdKY7y78SgasWl0IFg0gUZvGxcD9hC63N7v7WjNbCrS7\n+yrgJuC2qJF8GyEgEE13B6HBvQe4yN17ob+7bsYyo+GXAH8L7A88a2b3uvsSQmD6kpn1AO8Ci300\n38RSRSOtGq5eSk3zprewdNERXPnTNfS5M7bEtAxr0DaDqVPDXy4TJsANN+Sf//3vh61bBz8l4aij\nwvjmZviLv8gcv3XrwFMSXnwxdDIAToz+AL64+JssOOTE0L5zxhmDe8B9+9tw5JHw1FNw99394xZ2\nNdLx6mae3H823ePfx7FT9wr3Ho0bV5Hsig3lNym2P+YbX8mAddHHZtXkQlA3EsqIVE8NnvWUlkpK\nvV3vvdcfXF544VV+/dImDv7ER/jgH8wK1W0//GFmANq5M9xkevjh4RlzX/xiZqcFYMX3/pMPHDef\neXd9L1THjRuXWQK6555wn9G994YqwOwS0imnhM4W8X1He+8dSmtVyqtKtoFU46bSUm8kVAARkUFq\n2s7U1zdwb1AcYObNgz33hCeegIceGhyAbr89BIW//3v4x38M3aiT3nsvBJ1LLhl4IvaECSHITJoU\nSj5mof3nV7/KDEBTpoRSEww8ELW5OXS8qNHtBsN90VLRO9FFZPdS03amhoYQDPbee/C4+fPDXz5f\n/3r46+7ODDJxlddZZ4UnJSTH9fQMBIKnnw7BKB4OoYNCHEAuvDA8KQHC0w2am8OTs//rv8Kwb3wj\ntAMlA9DMmfBnfxbGv/himC8eV8LDSnOpl2pnBZACRmvVhEgx9dLOlFqeh5Xy0Y+Gv3y+853w5z7w\nsNJ33x0Yf+ml4XlwyfahZPfoF18MN5Lu2AG//W0Y9uEPDwSQM84ITzqIjR8flrdyZfh+/vmhtJQM\nQB/8YKiCA1i9OvMBpykfVlopqsLKo166iorUii6ghih+WGl398Bz4B54YPA9QrNm9b/+gU98IpRg\n4vG7dsFnPwvf/34Yv+eeIcDEzEK13HXXhaq/448PJbcjjxx4d1AKqsIaolKK8LU+wIay/lqnvV7s\nrm8dLEW9VJMUU7e/R/yw0qQTT8w9bezBBzO/79o10MPNHVatGtxD7g//MIyPA8vGjSHQVIECSB7J\nl+WYGS3jx2aMz/UGu/h9CAA/fmoTBpxR4aeK5lt/odeO5ur9Uc7rRfMtq5wDdzjuxB3q+89/sPrV\n/i64TQ3Gp1oP4oxjwg17+dJVTsm03PeKl5uv8RNs4/0sTvdQ3k9etyfjSK686n8aQIOxdNERzN5/\nQtk9ooqtYygXGVD4RWQFjRs30H5jFkoo+YwfH55oXUUKIHnMm97ClafO7T/BLL1nbbjLONqhrnvo\npf4SSld3X8aJqA/o6Q1Vgz/q2MQPv5iu+qvQjpssIe3qDm9zyz4xt4wfm/O1rMl5u7r7uO6hlzj5\niAMKvsI1+0A99agDuOfZ1/vvf0hOn+8gL3Qn7pWnzmXNazsHBd1CJ7pi7+POdRDHJ9eW8WO58qdr\n+m8C7Op1frD6VX7UvhHM6OnNvDCI5yvlbXnJ9JXzXvHGBmPJH8/ke4+/QldPX8Gg1rFhO+cse5yu\naD9b+eSrgNHX5zjhTt14eRP2HJNxYfP2b3fx85e2ZGzjmtd2DhqevLAoJVAl97vs37LQSTm5bdnb\nWShPrzx1LveteX3gaQB9ztfvfo7Gxob+F1PF+Zfcjjs7NvW/xCrOn+R+sfSetXl/j+Nm78uUCeOY\ne2BzxgVjvv29qcFy7k+F8iE7/3ItPzlPrt+mWhcACiAFbP99F33uOd/jnDxxNZgNTNfrJFuVyunB\nkr1jFColtIwfS1OD0RWt7472jRgw98Dm/kCQka5EOlrGj6XBDHenD/hl59s8/putOaeN03XdQy9l\nHKh3Pz3wfvddURD68scPY90bv824sS4+yAvdidvV3cfX736O6FzI7e0bObv1oP5tSR7M8ckwDoLJ\n93F3JdKRzL8GA0+cXOPfrLcvs/3PCb8fhOniC4PexHzx2/J6egaXTLNfQFXqe8WT+fp/H13fv01d\nvc6K1a+y8olXaWgI6U3maXfvQPp7++ItGNiWnj7nxkfX96c7eWETe6+7j/9993NkZUXG71QoUMWB\nO36HfLwtsR91bOKq0zLfL59833zyBFvoZAvkvGiLf5v+fHDo7enLyL/bn9zYHwiS6Yvzx6L8Su4X\ncf4te2w9EO1fvc4Dz7/Zv644X7PTnNzfu6L9iaz9KVdwwozunsz8u719Iw2J/Dlu9r79QT77N01O\nW612WwWQAnL1REmeuBqAD8+aPHD13t0XegNafEAXfyd3fFWUffV35jHTMg6WpT9by35775ExzXGz\n9+XB598MO3t0Bd1g9J+IcaehwTC8Px0dG7az9J619PZ5SKuHgyPXtHH6kgEzFycEodXrt4YDODob\n7cpxAs51J65lnczjbWlsyDyY45NhfKAm38dt0B8Mn3xlW0b+hUUPLD/e3saGcCI0g4boc2N0IPf2\nhnT1uWcEqd4+5/jD9+WRF9/KKJnC4BJVqe8VTz4OJVce9zr09g4+CZXa/SXXhU32+CSDjP29UKDK\nfod89jpyvV8+43siYOcK3nGpPnlyTV60xaUts9BEkGsbk4Eg1/jk74t7/7IIX2lsCBdb2fNmp7/Q\nb1MsOCWXk5H2Xsfi5WcFsOzfNDlttbpeK4AUkO/xBskTw5c/flj/8P4d3owT5oSibqE2kOxqiFh8\noCRPkM9s2gns7J8mPqGPG9PQ/9lJBA+gqamBq07LLDJf/0hn/4FuiYNjTI7iNZARMLMP1OT3XCcp\nM/oP8jjYJvMr+T7tq1atycjwq9dwAAAIlklEQVQHh/6Te7KjYHwS2v77roz571vzOr+MHlCYzL9c\ngS8ZhHJVQ8Sf+6sAo98gDoD7ThiXs2SaPEkm01eoOiH5OJTsE0/2thtRoEvk6ZHTmgcuLHr6aEhU\nL2aXnJJXqw02OHAANDUaZyeqfQDGNNqgfTSZl8l3yMd5Fcv1fvnk92TAzhW8s0+u2Rdt8TLjK/94\nH8jOvzgQGNE+lVXdlyxNnX/sDJb/v5czStFrXtvJHe0bM0pwyRJI9gVHvEyy0pysNk2mKd72np7M\n/GtqNBpylEws+l2Sv2k8baXeJV8KBZAisnui5Asqyequ3j7n6IMmDnpndnZdcvbVHQxc/R1xYDMA\nazfv5NlNOwedBB34xUtbuOq0sHPH9bqeWM5Z86aFx4snZJeqcgWNUqbPrjNOngziE1lcRM8VbLPz\ndvb+EzJKYvFBEB/MuUox2fMnT1JnHjONM4+Z1l/nnUxTXA2Wvb3ZaYuXm13fD2S8fjXfs41K7cX0\n6Q8d3L/9d3ZsGrTtyUb+uFqv//c4bW7ONobPHjsjb7qTVZ3x7xbX7Wdf8Myb3sIPLzw2s5ScJy+T\neZXdBpLdsJ38DvmDd3aQSe5HuZaZ3AdyBYLsC4bkfpw8Dj4xd/9Bx3i8P8X5l2tZxdIMDKrizbWc\n7DaQ5L7RmNU2Vss2EN0HUiGFnk8TB47kFUxTo3H87H15eN1bGcOSdf9x3Wi+K8fko8CTDYTxTltO\nz6xi21ZqrxXI3+CXtptsqb2tqtmzaLje71BKD6BKbU+9d2FO05OpEj2ohjvNQ3kGVrW2Rc/CovrP\nwirUZTZXVUpcDM2++rv+kU6ufWBd//sizp5/cP/02VeguXpL1XM3TBGpf7qRsAZyVVlk9xZKcnJX\nd2VXG52ZVa1QqJ/7SLn5S0RGPgWQYZYMBnFdM5BRz5/d2JWvnSU5XkFCRGpNVVhVMNzvQxYRqSRV\nYdWRXCUGlSJEZKSr3XOARURkRFMAERGRVBRAREQkFQUQERFJRQFERERSUQAREZFURvV9IGa2BdiQ\nYtbJwNsVTk4l1Gu6oH7TVq/pgvpNm9JVvnpNW9p0TXf3KcUmGtUBJC0zay/lJppqq9d0Qf2mrV7T\nBfWbNqWrfPWatuFOl6qwREQkFQUQERFJRQEkt2W1TkAe9ZouqN+01Wu6oH7TpnSVr17TNqzpUhuI\niIikohKIiIikogCSYGYLzWydmXWa2eVVWN9BZvaImT1vZmvN7K+i4VeZ2WYzezr6OyUxzxVR+taZ\n2UnDmXYze8XMnovS0B4N28fMHjSzX0f/W6LhZmb/Gq3/WTM7JrGc86Lpf21m5w0xTbMT+fK0mb1j\nZl+uVZ6Z2c1m9paZrUkMq1gemdm86DfojOa1IaTrGjN7MVr3T8xsYjR8hpm9m8i7G4utP982DiFt\nFfv9zGymma2Oht9uZmOHkK7bE2l6xcyernaeWf7zRM33M9xdf6EarxH4DXAIMBZ4BpgzzOs8ADgm\n+jwBeAmYA1wFfCXH9HOidI0DZkbpbRyutAOvAJOzhv0TcHn0+XLg6ujzKcB9hDfvLgBWR8P3AdZH\n/1uizy0V/M3eAKbXKs+AjwLHAGuGI4+AJ6JpLZr35CGk60SgKfp8dSJdM5LTZS0n5/rzbeMQ0lax\n3w+4A1gcfb4R+FLadGWNvxa4stp5Rv7zRM33M5VABswHOt19vbt3ASuBRcO5Qnd/3d2fij7/FngB\nmFpglkXASnff5e4vA51RuquZ9kXArdHnW4E/Swz/vgdtwEQzOwA4CXjQ3be5+3bgQWBhhdJyAvAb\ndy90s+iw5pm7Pwpsy7HOIedRNG5vd2/zcJR/P7GsstPl7g+4e0/0tQ2YVmgZRdafbxtTpa2Asn6/\n6Mr5eODOctNWKF3Rcv8c+GGhZQxHnhU4T9R8P1MAGTAV2Jj4vonCJ/OKMrMZwB8Aq6NBF0fFz5sT\nRd18aRyutDvwgJl1mNmF0bD93P316PMbwH41ShvAYjIP6HrIM6hcHk2NPg9HGr9AuNKMzTSzX5nZ\nL8zsI4n05lt/vm0cikr8fpOAHYlAWak8+wjwprv/OjGs6nmWdZ6o+X6mAFIHzGwv4MfAl939HeDf\ngPcDHwReJxSda+GP3f0Y4GTgIjP7aHJkdLVSk258Ub32J4EfRYPqJc8y1DKP8jGzrwE9wIpo0OvA\nwe7+B8BlwA/MbO9Sl1ehbazL3y/hHDIvVqqeZznOE0NaXiUogAzYDByU+D4tGjaszGwMYadY4e53\nAbj7m+7e6+59wHcJxfVCaRyWtLv75uj/W8BPonS8GRV54+L6W7VIGyGoPeXub0ZprIs8i1QqjzaT\nWc005DSa2fnAqcC50UmHqHpoa/S5g9C2cFiR9efbxlQq+PttJVTZNGUNTy1a1hnA7Yn0VjXPcp0n\nCiyvevtZKQ0lu8Mf4f3w6wkNdXGj3NxhXqcR6huvyxp+QOLzpYQ6YIC5ZDYoric0JlY87cD7gAmJ\nz/9NaLu4hsyGu3+KPv8pmQ13T0TD9wFeJjTatUSf96lA3q0EPl8PeUZWg2ol84jBjZunDCFdC4Hn\ngSlZ000BGqPPhxBOHgXXn28bh5C2iv1+hFJpshH9f6VNVyLfflGrPCP/eaLm+9mwnRxH4h+h98JL\nhKuJr1VhfX9MKHY+Czwd/Z0C3AY8Fw1flXVwfS1K3zoSPSUqnfbooHgm+lsbL5NQx/xfwK+BhxI7\noAHXR+t/DmhNLOsLhMbPThIn/SGk7X2EK83mxLCa5BmhWuN1oJtQd3xBJfMIaAXWRPN8h+jm35Tp\n6iTUgcf72o3RtGdGv/HTwFPAacXWn28bh5C2iv1+0b77RLS9PwLGpU1XNPx7wF9mTVu1PCP/eaLm\n+5nuRBcRkVTUBiIiIqkogIiISCoKICIikooCiIiIpKIAIiIiqSiAiIhIKgogIiKSigKIiIik8v8B\nYRmC/8ow3moAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10f1e2048>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import linked_list\n",
+    "\n",
+    "def create_heap(size):\n",
+    "    linked_list.heap = treadmill.Heap(heap_roots, heap_children, initial_size=size*2, scan_threshold=0.5, scan_step_size=10)\n",
+    "\n",
+    "    # create the list, adding it as a root to make sure it is not collected\n",
+    "    linked_list.create_list(size)\n",
+    "    \n",
+    "    # remove the list from roots so that it can be collected\n",
+    "    linked_list.episcopal_list = None\n",
+    "    \n",
+    "    return linked_list.heap\n",
+    "\n",
+    "object_sizes = range(100, 20000, 100)\n",
+    "times = []\n",
+    "\n",
+    "for object_size in object_sizes:\n",
+    "    time = timeit.timeit('heap.allocate()', setup='heap = create_heap(object_size)', number=50, globals=globals())\n",
+    "    times.append(time)\n",
+    "\n",
+    "draw_plot(object_sizes, times)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One of the bad cases of this implementation is that when it starts scanning, it goes through all roots at once. Therefore the call to `allocate` that starts scanning will be `O(n)` where n is the number of roots.\n",
+    "\n",
+    "We can see this behaviour below. As the number of roots increases, the time increases linearly."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
@@ -145,13 +246,6 @@
     "\n",
     "draw_plot(root_sizes, times)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
